# moo

./: Cargo.toml  README.md  deny.toml  moo.service  moo.toml  typos.toml
.github/workflows/: audit.yml  ci.yml
src/: README.md  config.rs  constants.rs  database.rs  free.rs  github.rs  handler.rs  logger.rs  main.rs  meeting.rs  panic.rs  priority.rs  pull_request.rs  shutdown.rs  sweeper.rs  sync.rs
src/command/: command.rs  error.rs  handle.rs  mod.rs  parse.rs
