[package]
name           = "moo"
version        = "0.0.18"
edition        = "2021"
authors        = ["hinto-janai"]
repository     = "https://github.com/Cuprate/moo"
keywords       = ["matrix", "bot"]
readme         = "README.md"
license        = "MIT"
description    = "Matrix bot for Cuprate"

[dependencies]
anyhow             = { version = "1" }
chrono             = { version = "0.4" }
const_format       = { version = "0.2" }
dirs               = { version = "5" }
matrix-sdk         = { version = "0.8", features = ["markdown", "anyhow"] }
once_cell          = { version = "1" }
rand               = { version = "0.8" }
readable           = { version = "0.16", features = ["full"] }
reqwest            = { version = "0.12", features = ["gzip"] }
serde              = { version = "1", features = ["derive"] }
serde_json         = { version = "1" }
serde_plain        = { version = "1" }
strum              = { version = "0.26", features = ["derive"] }
thiserror          = { version = "2" }
tokio              = { version = "1", features = ["full"] }
toml               = { version = "0.8" }
tracing            = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
zeroize            = { version = "1" }

[dev-dependencies]
pretty_assertions = { version = "1" }
